[package]
name = "cadr-guide"
version = "0.1.0"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "6.3.0"
random_stuff = "0.1.0"
thiserror = "1.0.23"
mktemp = "0.4.1"
cargo_toml = "0.8.1"
serde_yaml = "0.8.16"
toml = "0.5.8"
serde = "1.0.123"
serde_derive = "1.0.123"
walkdir = "2.3.2"
terminal_size = "0.1.17"
dirs-next = "2.0.0"
chrono = "0.4.19"
once_cell = "1.8.0"
serde-xml-rs = "0.4.1"
